page/4-1-consultationlistpage: gpt 구현

--- a/bitamin/index.html
+++ b/bitamin/index.html
@@ -7,7 +7,7 @@
     <title>BITAMIN</title>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=665ebd0c4d1235a24f8cd7757e9a52ba&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP%&libraries=services"
     ></script>
   </head>
   <body>
